# mainstay_connect

./: .gitignore  README.md  example.py  main.py  pyproject.toml  setup.py
conda_env/: local_install.yaml  remote_install.yaml
mainstay_connect/: __init__.py  connect.py  fetch_CLI.py
mainstay_connect/utils/: cli_utils.py  dt_utils.py  pagination_utils.py
tests/: test_connect.py
