[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mainstay_connect"
version = "1.2.1"
authors = [
    {name = "Isaac Kerson", email = "ikerson@gsu.edu"},
    {name = "Christopher Carbonaro", email = "ccarbonaro@gsu.edu"},
]
description = "A Mainstay API connection handler"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "keyring",
    "requests",
    "pandas",
    "loguru>=0.7.3",
]

[project.urls]
"Homepage" = "https://github.com/GSU-Analytics/mainstay_connect"
"Bug Tracker" = "https://github.com/GSU-Analytics/mainstay_connect/issues"

[project.scripts]
mainstay-fetch = "mainstay_connect.fetch_CLI:fetch_cli"

[project.optional-dependencies]
test = ["pytest"]
